Implementação das funcionalidades de operações.

--- a/src/main/java/com/mycompany/contai/Banco.form
+++ b/src/main/java/com/mycompany/contai/Banco.form
@@ -615,11 +615,24 @@
                       <Component id="jSeparator6" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
-                  <Group type="102" attributes="0">
+                  <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jLabel8" min="-2" pref="281" max="-2" attributes="0"/>
-                          <Component id="comboOperacao" alignment="0" min="-2" pref="153" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="1" attributes="0">
+                          <Component id="btnEfetuarOperacao" min="-2" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="jLabel8" min="-2" pref="281" max="-2" attributes="0"/>
+                              <Component id="comboOperacao" alignment="0" min="-2" pref="153" max="-2" attributes="0"/>
+                              <Group type="102" alignment="0" attributes="0">
+                                  <Component id="deposito" min="-2" pref="96" max="-2" attributes="0"/>
+                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                  <Component id="txtDeposito" max="32767" attributes="0"/>
+                              </Group>
+                              <Group type="102" attributes="0">
+                                  <Component id="saque" min="-2" pref="96" max="-2" attributes="0"/>
+                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                  <Component id="txtSaque" max="32767" attributes="0"/>
+                              </Group>
+                          </Group>
                       </Group>
                       <EmptySpace max="32767" attributes="0"/>
                   </Group>
@@ -644,7 +657,19 @@
                       <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="comboOperacao" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="373" max="32767" attributes="0"/>
+                      <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="deposito" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtDeposito" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="saque" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtSaque" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
+                      <Component id="btnEfetuarOperacao" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace pref="217" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -693,6 +718,28 @@
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
               </AuxValues>
+            </Component>
+            <Component class="javax.swing.JLabel" name="deposito">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Valor do dep&#xf3;sito"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JTextField" name="txtDeposito">
+            </Component>
+            <Component class="javax.swing.JLabel" name="saque">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Valor do saque"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JTextField" name="txtSaque">
+            </Component>
+            <Component class="javax.swing.JButton" name="btnEfetuarOperacao">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Efetuar opera&#xe7;&#xe3;o"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnEfetuarOperacaoActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
