--- a/src/main/java/com/mycompany/contai/Banco.form
+++ b/src/main/java/com/mycompany/contai/Banco.form
@@ -87,24 +87,24 @@
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="rg" min="-2" pref="37" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="1" attributes="0">
+                              <Group type="103" groupAlignment="0" attributes="0">
                                   <Group type="102" attributes="0">
-                                      <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
-                                      <Component id="txtRG" max="32767" attributes="0"/>
-                                  </Group>
-                                  <Group type="102" attributes="0">
-                                      <EmptySpace pref="31" max="32767" attributes="0"/>
+                                      <EmptySpace pref="43" max="32767" attributes="0"/>
                                       <Component id="btnCadastrar" min="-2" pref="88" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Component id="btnAtualizar" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Component id="btnExcluir" min="-2" max="-2" attributes="0"/>
-                                      <EmptySpace min="-2" pref="68" max="-2" attributes="0"/>
+                                      <EmptySpace min="-2" pref="56" max="-2" attributes="0"/>
                                       <Component id="btnListar" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Component id="btnLimpar" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Component id="comboOrdenacao" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                                  <Group type="102" attributes="0">
+                                      <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
+                                      <Component id="txtRG" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -372,24 +372,16 @@
                                       <Component id="txtDepositoInicialInvest" max="32767" attributes="0"/>
                                   </Group>
                                   <Group type="102" alignment="1" attributes="0">
-                                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="limite" min="-2" pref="86" max="-2" attributes="0"/>
-                                          <Component id="numeroConta" alignment="0" min="-2" pref="86" max="-2" attributes="0"/>
                                           <Component id="depositoInicial" alignment="0" min="-2" pref="86" max="-2" attributes="0"/>
+                                          <Component id="limite" alignment="0" min="-2" pref="86" max="-2" attributes="0"/>
+                                          <Component id="numeroConta" alignment="0" min="-2" pref="86" max="-2" attributes="0"/>
                                       </Group>
+                                      <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
-                                          <Group type="102" attributes="0">
-                                              <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
-                                              <Component id="txtLimite" min="-2" pref="500" max="-2" attributes="0"/>
-                                          </Group>
-                                          <Group type="102" alignment="1" attributes="0">
-                                              <EmptySpace max="-2" attributes="0"/>
-                                              <Group type="103" groupAlignment="0" attributes="0">
-                                                  <Component id="txtNumeroConta" alignment="1" min="-2" pref="500" max="-2" attributes="0"/>
-                                                  <Component id="txtDepositoInicial" alignment="1" min="-2" pref="500" max="-2" attributes="0"/>
-                                              </Group>
-                                          </Group>
+                                          <Component id="txtLimite" max="32767" attributes="0"/>
+                                          <Component id="txtDepositoInicial" max="32767" attributes="0"/>
+                                          <Component id="txtNumeroConta" max="32767" attributes="0"/>
                                       </Group>
                                   </Group>
                               </Group>
@@ -434,9 +426,9 @@
                           <Component id="limite" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="1" attributes="0">
-                          <Component id="numeroConta" min="-2" max="-2" attributes="0"/>
-                          <Component id="txtNumeroConta" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="txtNumeroConta" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="numeroConta" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
